--- a/prisoners_app/templates/complaint_update.html
+++ b/prisoners_app/templates/complaint_update.html
@@ -4,7 +4,7 @@
 <div class="module">  
     <div class="module-head">
         <h3>
-            <span>Complain Update Form</span>
+            <span>complaint Update Form</span>
             <a href="../" class="icon-fullscreen pull-right bordero" style="padding:0 10px;border-radius: 25%;"></a>
         </h3>
     </div>
@@ -12,14 +12,12 @@
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="row margino" style="margin: 0;">
-                <div class="col col-xs-3 ">{{c_form.prisoner|as_crispy_field}}</div>
-                <div class="col col-xs-3 ">{{c_form.date|as_crispy_field}}</div>
-                <div class="col col-xs-2 ">{{c_form.status|as_crispy_field}}</div>
+                <div class="col col-xs-3 ">{{c_form.prisoner|as_crispy_field}}</div><br>
+                <div class="col col-xs-2 "><p>{{complaint.status}}</p></div>
             </div>
             <div class="row margino" style="margin: 0;">
                     <div class="col col-xs-6 ">
-                        {{c_form.summary|as_crispy_field}}
-                        {{c_form.replied|as_crispy_field}}
+                        {{c_form.description|as_crispy_field}}
                     </div>
                     <div class="col col-xs-3 ">
                         <br><hr>
