--- a/prisoners_app/templates/prisoner_details_modal.html
+++ b/prisoners_app/templates/prisoner_details_modal.html
@@ -1,12 +1,8 @@
-<!-- {% extends 'base1.html' %}
-{% load crispy_forms_tags %}
-{% load static %}
-{% block content %} -->
 <div class="module">
   <div class="module-head">
     <h3>
         <span>Prisoner profile</span>
-        <a href="../" class="icon-fullscreen pull-right bordero" style="padding:0 10px;border-radius: 25%;"></a>
+        <a href="" class="icon-fullscreen pull-right bordero" style="padding:0 10px;border-radius: 25%;"></a>
     </h3>
     <span></span>
   </div>
@@ -53,25 +49,9 @@
             <img src="{{prisoner.photo.url}}" style="width: 55%;">
           </p>
           <hr>
-          <div class="btn-row">
-            <div class="span6">
-              <a class="btn btn-primary" href="{% url 'prisoner_update' prisoner.id %}">Edit</a>
-            </div>
-            <div class="span6">
-              <a class="btn btn-danger modal_delete" data-toggle="modal" data-target="#deletemodal" data-url="{% url 'prisoner_delete' prisoner.id %}" >Delete</a>
-            </div>  
-          </div>
+          <hr>
         </div>
       </div>
     </div>
   </div>
 </div>
-<div class="modal fade" id="deletemodal" tabindex="-1" role="dialog" aria-labelledby="deletemodalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-sm mymodal" role="document">
-        
-    </div>
-</div><!-- /.delete modal -->
-<!-- {% endblock %}
-{% block script %}
-<script src="{% static 'scripts/modal_delete.js' %}" type="text/javascript"></script>
-{% endblock %} -->
