--- a/prisoners_app/templates/prisoners.html
+++ b/prisoners_app/templates/prisoners.html
@@ -17,8 +17,8 @@
                     <th>Prisoner Firstname</th>
                     <th>Prisoner Last name</th>
                     <th>Identification</th>
-                    <th>crime</th>
-                    <th>Status</th>
+                    <th>Offense</th>
+                    <th>Cell</th>
                     <th>Actions</th>
                 </tr>
             </thead>
@@ -30,7 +30,7 @@
                     <td>{{prisoner.lastname}}</td>
                     <td>{{prisoner.identification}}</td>
                     <td>{{prisoner.crime}}</td>
-                    <td class="center">{{prisoner.status}}</td>
+                    <td class="center">{{prisoner.cell}}</td>
                     <!-- <td class="center"><a href="{% url 'prisoner_update' prisoner.id %}">Update</a> / <a href="{% url 'prisoner_delete' prisoner.id %}">Delete</a></td> -->
                     <td class="center">
                         <a class="btn btn-xs btn-info" href="{% url 'prisoner_update' prisoner.id %}">Edit</a> / 
