--- a/prisoners_app/templates/release_form.html
+++ b/prisoners_app/templates/release_form.html
@@ -1,18 +1,12 @@
-<!-- {% extends 'base1.html' %}
-{% load crispy_forms_tags %}
-{% load static %}
-{% block content %} -->
-<div class="module">
-  <div class="module-head">
-    <h3>
-        <span>Prisoner profile</span>
-        <a href="../" class="icon-fullscreen pull-right bordero" style="padding:0 10px;border-radius: 25%;"></a>
-    </h3>
-    <span></span>
-  </div>
-  <div class="module-body">
-    <h5>{{prisoner}}</h5><hr>
-    <div class="btn-row row-fluid">
+<form method="post">
+    {% csrf_token %}
+    <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="deletemodalLabel">Release Form</h5>
+        </div>
+        <div class="modal-body">
+            <p>
+                <div class="btn-row row-fluid">
       <div class="span7">
         <div class="btn-row row-fluid">
           <div class="span4">
@@ -53,25 +47,14 @@
             <img src="{{prisoner.photo.url}}" style="width: 55%;">
           </p>
           <hr>
-          <div class="btn-row">
-            <div class="span6">
-              <a class="btn btn-primary" href="{% url 'prisoner_update' prisoner.id %}">Edit</a>
-            </div>
-            <div class="span6">
-              <a class="btn btn-danger modal_delete" data-toggle="modal" data-target="#deletemodal" data-url="{% url 'prisoner_delete' prisoner.id %}" >Delete</a>
-            </div>  
-          </div>
         </div>
       </div>
     </div>
-  </div>
-</div>
-<div class="modal fade" id="deletemodal" tabindex="-1" role="dialog" aria-labelledby="deletemodalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-sm mymodal" role="document">
-        
+            </p>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-primary">Confirm</button>
+        </div>
     </div>
-</div><!-- /.delete modal -->
-<!-- {% endblock %}
-{% block script %}
-<script src="{% static 'scripts/modal_delete.js' %}" type="text/javascript"></script>
-{% endblock %} -->
+</form>
