--- a/accounts_app/templates/login.html
+++ b/accounts_app/templates/login.html
@@ -10,8 +10,7 @@
             </div>
             <div class="module-body">
                 <div class="row" style="margin: 0;">    
-                    <div class="span3">{{l_form.username|as_crispy_field}}</div> 
-                    <div class="span3">{{l_form.password|as_crispy_field}}</div>
+                    <div class="span3">{{l_form}}</div>
                 </div> 
             </div>
             <div class="module-foot">
