--- a/prisoners_app/templates/complaints.html
+++ b/prisoners_app/templates/complaints.html
@@ -37,7 +37,7 @@
                     <td class="cell-title">Complaint</td>
                     <td class="cell-title">Requester</td>
                     <td class="cell-status hidden-phone hidden-tablet">Status</td>
-                    <td class="cell-time align-right">Cort Date</td>
+                    <td class="cell-time align-right">Court Date</td>
                 </tr>
                 {% for complaint in complaints %}  
                 {% if complaint.status == "Pending" %}
