--- a/prisoners_app/templates/prisoner_details.html
+++ b/prisoners_app/templates/prisoner_details.html
@@ -1,7 +1,7 @@
-<!-- {% extends 'base1.html' %}
+{% extends 'base1.html' %}
 {% load crispy_forms_tags %}
 {% load static %}
-{% block content %} -->
+{% block content %}
 <div class="module">
   <div class="module-head">
     <h3>
@@ -71,7 +71,7 @@
         
     </div>
 </div><!-- /.delete modal -->
-<!-- {% endblock %}
+{% endblock %}
 {% block script %}
 <script src="{% static 'scripts/modal_delete.js' %}" type="text/javascript"></script>
-{% endblock %} -->
+{% endblock %}
