--- a/prisoners_app/templates/transfer_update.html
+++ b/prisoners_app/templates/transfer_update.html
@@ -1,5 +1,6 @@
 {% extends 'base1.html' %}
 {% load crispy_forms_tags %}
+{% load static %}
 {% block content %}
 <div class="module">
     <div class="module-head">
@@ -10,6 +11,7 @@
     </div>
     <div class="module-body">
         <form method="post">
+            {{t_form.media}}
             {% csrf_token %}
             <div class="row" style="margin: 0;">
                 <div class="col col-xs-4 ">{{t_form.prisoner|as_crispy_field}}</div>
@@ -20,7 +22,7 @@
                 <div class="col col-xs-3 ">
                     {{t_form.where_from|as_crispy_field}}
                     {{t_form.where_to|as_crispy_field}}
-                    <button type="submit" class="btn btn-primary">Create</button>
+                    <button type="submit" class="btn btn-primary">Update</button>
                 </div>
             </div> 
         </form>
