--- a/templates/base1.html
+++ b/templates/base1.html
@@ -3,7 +3,6 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,6 +16,7 @@
         <link type="text/css" href="{% static 'css/forms.css' %}" rel="stylesheet">
         <link type="text/css" href="{% static 'images/icons/css/font-awesome.css' %}" rel="stylesheet">
         <link type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600"rel='stylesheet'>
+        <script src="{% static 'scripts/jquery-1.9.1.min.js' %}" type="text/javascript"></script>
         <style>
         .bordero{border:solid ;border-width:1px;};
         .margino{margin: 0;};
@@ -61,7 +61,7 @@
                                 <img src="{{ user.photo.url }}" class="nav-avatar" />
                                 <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="{% url 'user_update' user.id %}">Edit Profile</a></li>
+                                    <li><a href="{% url 'user_update' request.user.id %}">Edit Profile</a></li>
                                     <li class="divider"></li>
                                     <li><a href="" data-toggle="modal" data-target="#logoutmodal">Logout</a></li>
                                 </ul>
@@ -95,8 +95,7 @@
                     <div class="span3">
                         <div class="sidebar">
                             <ul class="widget widget-menu unstyled">
-                                <li class="active"><a href="{% url 'dashboard' %}"><i class="menu-icon icon-dashboard"></i>Dashboard
-                                </a></li>
+                                <li class="active"><a href="{% url 'dashboard' %}"><i class="menu-icon icon-dashboard"></i>Dashboard</a></li>
                             </ul>
                             <!--/.widget-nav-->
                             {% if user.category.name == 'Prison_Manager' %}
@@ -120,6 +119,7 @@
                                 {% if user.category.name == 'Prison_Manager' %}
                                 <li><a href="{% url 'users' %}"><i class="menu-icon icon-user"></i> Users </a></li>
                                 <li><a href="{% url 'categorys' %}"><i class="menu-icon icon-bullhorn"></i> Categories </a></li>
+                                <li><a href="{% url 'reports' %}"><i class="menu-icon icon-book"></i> Reports </a></li>
                                 {% endif %}
                                 <li><a class="collapsed" data-toggle="collapse" href="#togglePages"><i class="menu-icon icon-cog">
                                 </i><i class="icon-chevron-down pull-right"></i><i class="icon-chevron-up pull-right">
@@ -167,3 +167,4 @@
         {% block script %}
         {% endblock %}
     </body>
+</html>
