--- a/accounts_app/templates/login.html
+++ b/accounts_app/templates/login.html
@@ -10,7 +10,7 @@
             </div>
             <div class="module-body">
                 <div class="row" style="margin: 0;">    
-                    <div class="span3">{{l_form}}</div>
+                    <div class="span3">{{l_form|crispy}}</div>
                 </div> 
             </div>
             <div class="module-foot">
