--- a/prisoners_app/templates/complaint_add.html
+++ b/prisoners_app/templates/complaint_add.html
@@ -29,6 +29,7 @@
                         <br><hr>
                     </div>
             </div>
+            <input type="hidden" name="form" value="add">
         </form>
     <div>
 </div>   
