--- a/prisoners_app/templates/prisoner_add.html
+++ b/prisoners_app/templates/prisoner_add.html
@@ -34,6 +34,7 @@
                 <div class="col col-xs-3 ">{{p_form.photo|as_crispy_field}}</div>
             </div>
             <button type="submit" class="btn btn-primary">Create</button>
+            <input type="hidden" name="form" value="add">
         </form>
     <div>
 </div>
