--- a/templates/base1.html
+++ b/templates/base1.html
@@ -56,7 +56,7 @@
                         </ul>
 
                         <ul class="nav pull-right">
-                            <li><a href="#">{{request.user}} </a></li>
+                            <li><a href="{% url 'user_update' request.user.id %}">{{request.user}} </a></li>
                             <li class="nav-user dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <img src="{{ user.photo.url }}" class="nav-avatar" />
                                 <b class="caret"></b></a>
