--- a/prisoners_app/templates/release_form.html
+++ b/prisoners_app/templates/release_form.html
@@ -2,7 +2,7 @@
     {% csrf_token %}
     <div class="modal-content">
         <div class="modal-header">
-            <h5 class="modal-title" id="deletemodalLabel">Release Form</h5>
+            <h5 class="modal-title" id="deletemodalLabel">Release Form for {{prisoner.firstname}} {{prisoner.lastname}}</h5>
         </div>
         <div class="modal-body">
             <p>
@@ -54,7 +54,7 @@
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-            <button type="button" class="btn btn-primary">Confirm</button>
+            <button type="button" class="btn btn-primary" data-dismiss="modal">Print</button>
         </div>
     </div>
 </form>
