--- a/accounts_app/templates/login.html
+++ b/accounts_app/templates/login.html
@@ -18,7 +18,7 @@
                     <div class="controls clearfix">
                         <button type="submit" class="btn btn-primary pull-right">Login</button>
                         <label>
-                            <input type="checkbox"><span>Remember me</span> 
+                            <input type="checkbox"><span>Remember me tumoro</span> 
                         </label>
                     </div>
                 </div>
