--- a/accounts_app/templates/user_update.html
+++ b/accounts_app/templates/user_update.html
@@ -24,6 +24,7 @@
                 <div class="col col-xs-4 ">{{p_form.photo|as_crispy_field}}</div> 
             </div><hr>
             <button type="submit" class="btn btn-primary">Update</button> 
+            <input type="hidden" name="form" value="update">
         </form>
     </div>
 </div>
